update auto drain
